<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sho.gof.MainActivity">

    <Button
        android:id="@+id/iterator_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iterator" />

    <Button
        android:id="@+id/state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state" />

    <Button
        android:id="@+id/observer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observer" />

    <Button
        android:id="@+id/adapter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adapter" />

    <Button
        android:id="@+id/template_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/template" />

    <Button
        android:id="@+id/singleton_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singleton" />

</LinearLayout>
