<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/current_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <Button
        android:id="@+id/change_state_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_time_text"
        android:text="@string/change_state"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_state_button"
        android:orientation="horizontal">

        <Button
            android:id="@+id/safe_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/safe_use" />

        <Button
            android:id="@+id/emergency_bell_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emergency" />

        <Button
            android:id="@+id/call_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call" />

    </LinearLayout>

</RelativeLayout>